--- a/fedora/sway/.config/sway/config
+++ b/fedora/sway/.config/sway/config
@@ -76,7 +76,7 @@ output * bg /usr/share/backgrounds/default.jxl fill
     bindsym $mod+Return exec $term
 
     # Kill focused window
-    bindsym $mod+Shift+q kill
+    bindsym $mod+Shift+Delete kill
 
     # Start your launcher
     bindsym $mod+d exec $menu
