--- a/fedora/sway/.config/sway/config
+++ b/fedora/sway/.config/sway/config
@@ -147,6 +147,19 @@ output * bg /usr/share/backgrounds/default.jxl fill
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+   
+    # Cycle through workspaces
+    bindsym $mod+Ctrl+$right workspace next
+    bindsym $mod+Ctrl+$left workspace prev
+    bindsym $mod+Ctrl+Right workspace next
+    bindsym $mod+Ctrl+Left workspace prev
+
+    # Move workspaces left/right
+    bindsym $mod+Ctrl+Shift+$right move container to workspace next; workspace next
+    bindsym $mod+Ctrl+Shift+$left move container to workspace prev; workspace prev
+    bindsym $mod+Ctrl+Shift+Right move container to workspace next; workspace next
+    bindsym $mod+Ctrl+Shift+Left move container to workspace prev; workspace prev
+
 #
 # Layout stuff:
 #
